在 index.html 內新增文字內容

--- a/index.html
+++ b/index.html
@@ -8,6 +8,75 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <header>
+            <div class="header_left">
+                <img src="">
+                <p>Taichung City, Taiwan</p>
+            </div>
+            <div class="header_right">
+                <p>自我介紹------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+                <p>E-mail: fjeif@gmail.com</p>
+                <p>Phone : 0990344355</p>
+                <p>github連結</p>
+            </div>
+            <hr><hr>
+            <main>
+                <section id="skill">
+                    <h3>技能</h3>
+                    <div>
+                        <h6>前端技術</h6>
+                        <hr>
+                        <ul>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>設計工具</h6>
+                        <hr>
+                        <ul>
+                            <li>Figma</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>版本控制</h6>
+                        <hr>
+                        <ul>
+                            <li>Git</li>
+                            <li>Github</li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="school">
+                    <h3>學歷</h3>
+                    <p>靜宜大學 資訊管理學系</p>
+                    <p>2020-2024</p>
+                </section>
+                <section id="自傳">
+                    <h3>自傳</h3>
+                    <p>自我介紹</p>
+                    <h6>階段目標</h6>
+                    <p>短期</p>
+                    <ol>
+                        <li>fef</li>
+                        <li>feg</li>
+                    </ol>
+                    <p>中期</p>
+                    <ol>
+                        <li>fef</li>
+                        <li>feg</li>
+                    </ol>
+                    <p>長期</p>
+                    <ol>
+                        <li>fef</li>
+                        <li>feg</li>
+                    </ol>
+                </section>
+                <section id="作品集">
+                    <h3>作品集</h3>
+                </section>
+            </main>
+        </header>
     </body>
 </html>
