index.html文件內容增加；style.css增加 float 功能和排版

--- a/index.html
+++ b/index.html
@@ -10,73 +10,83 @@
     <body>
         <header>
             <div class="header_left">
-                <img src="">
+                <!-- <img src=""> -->
                 <p>Taichung City, Taiwan</p>
             </div>
             <div class="header_right">
-                <p>自我介紹------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+                <p>
+                    大家好，我是一名大三的資管系學生，正在積極尋找實習機會，希望能夠在實習中學習並成長。
+                </p>
+
+                <p>
+                    作為一位對成為優秀軟體工程師充滿熱情的學生，我一直在努力學習前端技術，並利用空閒時間鑽研相關知識，同時也有建立作品集。我很享受把想法變成現實的過程，因為那會給我帶來很大的成就感。
+                </p>
+                    
+                <p>
+                    如果有機會加入貴公司的團隊，我會全力以赴，並致力於學習和提高自己的能力，期待能夠與大家一起成長和進步。
+                </p>
                 <p>E-mail: fjeif@gmail.com</p>
                 <p>Phone : 0990344355</p>
-                <p>github連結</p>
+                <!-- <p>github連結</p> -->
             </div>
-            <hr><hr>
-            <main>
-                <section id="skill">
-                    <h3>技能</h3>
-                    <div>
-                        <h6>前端技術</h6>
-                        <hr>
-                        <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h6>設計工具</h6>
-                        <hr>
-                        <ul>
-                            <li>Figma</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h6>版本控制</h6>
-                        <hr>
-                        <ul>
-                            <li>Git</li>
-                            <li>Github</li>
-                        </ul>
-                    </div>
-                </section>
-                <section id="school">
-                    <h3>學歷</h3>
-                    <p>靜宜大學 資訊管理學系</p>
-                    <p>2020-2024</p>
-                </section>
-                <section id="自傳">
-                    <h3>自傳</h3>
-                    <p>自我介紹</p>
-                    <h6>階段目標</h6>
-                    <p>短期</p>
-                    <ol>
-                        <li>fef</li>
-                        <li>feg</li>
-                    </ol>
-                    <p>中期</p>
-                    <ol>
-                        <li>fef</li>
-                        <li>feg</li>
-                    </ol>
-                    <p>長期</p>
-                    <ol>
-                        <li>fef</li>
-                        <li>feg</li>
-                    </ol>
-                </section>
-                <section id="作品集">
-                    <h3>作品集</h3>
-                </section>
-            </main>
         </header>
+        <hr><hr>
+        <main>
+            <h2>技能</h2>
+            <section id="skill" class="skill_box">
+                <div class="skill_ul">
+                    <h4>前端技術</h4>
+                    <hr>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="skill_ul">
+                    <h4>設計工具</h4>
+                    <hr>
+                    <ul>
+                        <li>Figma</li>
+                    </ul>
+                </div>
+                <div class="skill_ul">
+                    <h4>版本控制</h4>
+                    <hr>
+                    <ul>
+                        <li>Git</li>
+                        <li>Github</li>
+                    </ul>
+                </div>
+            </section>
+            <section id="school">
+                <h2>學歷</h2>
+                <p>靜宜大學 資訊管理學系</p>
+                <p>2020 - 2024</p>
+            </section>
+            <section id="自傳">
+                <h2>自傳</h2>
+                <p>自我介紹</p>
+                <h3>階段目標</h3>
+                <p>短期</p>
+                <ol>
+                    <li>學好 JavaScript 基礎</li>
+                    <li>學習撰寫 RWD </li>
+                </ol>
+                <p>中期</p>
+                <ol>
+                    <li>嘗試參加一次IT鐵人賽的自我挑戰</li>
+                    <li>加強自身英文能力，以期能流暢閱讀技術論壇，進而提升自身能力</li>
+                </ol>
+                <p>長期</p>
+                <ol>
+                    <li>持續主動學習，加強程式能力</li>
+                    <li>撰寫學習筆記，幫助自身加強記憶</li>
+                </ol>
+            </section>
+            <!-- <section id="作品集">
+                <h2>作品集</h2>
+            </section> -->
+        </main>    
     </body>
 </html>
